Feb 05, 2026: Leetcode array